--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86bdd6">  <td>23/09/30 13:51:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ebay.test()[pri:0, instance:ebay.Ebay@6c1a5b54]">test</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>23/09/30 13:51:29</td>   <td>-3424</td> <td>&nbsp;</td><td title="&gt;&gt;Ebay.Open()[pri:0, instance:ebay.Ebay@6c1a5b54]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>23/10/09 10:37:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SearchflightTest.setUp()[pri:0, instance:myworks.SearchflightTest@60099951]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391183339</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>23/10/09 10:38:00</td>   <td>1263</td> <td>&nbsp;</td><td title="&lt;&lt;SearchflightTest.tearDown()[pri:0, instance:myworks.SearchflightTest@60099951]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>23/10/09 10:38:00</td>   <td>1252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchflightTest.searchflight()[pri:0, instance:myworks.SearchflightTest@60099951]">searchflight</td> 
+  <td>main@391183339</td>   <td></td> </tr>
 </table>
